--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "autoprefixer": "^10.4.19",
     "eslint": "^8.0.1",
     "eslint-plugin-simple-import-sort": "^12.1.0",
+    "json-server": "1.0.0-beta.0",
+    "json-server-auth": "^2.1.0",
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.14",
