--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "dev": "vite",
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "json-server --watch -p 3333 db.json -m ./node_modules/json-server-auth"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.4.2",
@@ -45,8 +46,8 @@
     "autoprefixer": "^10.4.19",
     "eslint": "^8.0.1",
     "eslint-plugin-simple-import-sort": "^12.1.0",
-    "json-server": "1.0.0-beta.0",
-    "json-server-auth": "^2.1.0",
+    "json-server": "0.17.4",
+    "json-server-auth": "2.1.0",
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.14",
