--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "server": "json-server --watch -p 3333 db.json -m ./node_modules/json-server-auth"
+    "server": "json-server --watch -p 3333 db.json --routes routes.json -m ./node_modules/json-server-auth"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.4.2",
