--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "build": "tsc && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "server": "json-server --watch -p 3333 db.json --routes routes.json -m ./node_modules/json-server-auth"
+    "server": "json-server --watch -p 3333 db.json --routes routes.json -m ./node_modules/json-server-auth",
+    "test": "vitest"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.4.2",
@@ -42,6 +43,8 @@
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.2.2",
+    "@testing-library/jest-dom": "^6.4.6",
+    "@testing-library/react": "^16.0.0",
     "@types/node": "^20.12.12",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
@@ -49,6 +52,7 @@
     "autoprefixer": "^10.4.19",
     "eslint": "^8.0.1",
     "eslint-plugin-simple-import-sort": "^12.1.0",
+    "happy-dom": "^14.12.0",
     "json-server": "0.17.4",
     "json-server-auth": "2.1.0",
     "postcss": "^8.4.38",
@@ -56,6 +60,7 @@
     "prettier-plugin-tailwindcss": "^0.5.14",
     "tailwindcss": "^3.4.3",
     "typescript": "^5.2.2",
-    "vite": "^5.2.0"
+    "vite": "^5.2.0",
+    "vitest": "^1.6.0"
   }
 }
