--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "happy-dom": "^14.12.0",
     "json-server": "0.17.4",
     "json-server-auth": "2.1.0",
+    "msw": "^2.3.1",
     "postcss": "^8.4.38",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.14",
