--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
     "server": "json-server --watch -p 3333 db.json --routes routes.json -m ./node_modules/json-server-auth",
-    "test": "vitest"
+    "test": "vitest",
+    "dev:test": "vite --port 50789 --mode test"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.4.2",
@@ -64,5 +65,10 @@
     "typescript": "^5.2.2",
     "vite": "^5.2.0",
     "vitest": "^1.6.0"
+  },
+  "msw": {
+    "workerDirectory": [
+      "public"
+    ]
   }
 }
